# graph-coloring-max-gain

./: CMakeLists.txt  Mtx2Graph.cpp  Mtx2Graph.hpp  README.md  TestMaxGain.py  datatypes.hpp  experiments.py  experiments2.py  experiments3.py  experiments_with_matrices.py  graph.h  main.cpp  main2.cpp  main3.cpp  main_simple_graph.cpp  stats.py  vis3d.py
